--- a/src/styles/themes/proton/page.setup/setup.styl
+++ b/src/styles/themes/proton/page.setup/setup.styl
@@ -44,6 +44,8 @@
   --status-active: #2494ff
   --btn-fg: #afb2b8
   --scrollbar-color: #ffffff46
+  --frame-scrollbar-color: #ffffff46
+  --toolbar-scrollbar-color: #ffffff46
 #root[data-toolbar-color-scheme="light"]
   --frame-bg: #ffffff
   --frame-fg: #15141A
@@ -61,6 +63,8 @@
   --status-active: #0a84ff
   --btn-fg: #24262a
   --scrollbar-color: #00000046
+  --frame-scrollbar-color: #00000046
+  --toolbar-scrollbar-color: #00000046
 
 html
   position: relative
