--- a/src/styles/themes/proton/sidebar/bar.navigation.styl
+++ b/src/styles/themes/proton/sidebar/bar.navigation.styl
@@ -496,6 +496,7 @@
   padding: var(--nav-btn-margin)
   overflow: hidden
   overflow-y: auto
+  scrollbar-color: var(--toolbar-scrollbar-color) #0000
 #root[data-native-scrollbars-thin="true"] .NavigationBar .hidden-panels-popup-content
   scrollbar-width: thin
 
