--- a/src/styles/themes/proton/sidebar/popup.context-menu.styl
+++ b/src/styles/themes/proton/sidebar/popup.context-menu.styl
@@ -304,7 +304,7 @@
   padding: var(--ctx-menu-padding)
   overflow-y: auto
   scrollbar-width: none
-  scrollbar-color: var(--scroll-color) #0000
+  scrollbar-color: var(--popup-scrollbar-color) var(--ctx-menu-bg)
 #root[data-native-scrollbar="true"] .CtxMenu .scroll-box
   scrollbar-width: auto
 #root[data-native-scrollbar="true"][data-native-scrollbars-thin="true"] .CtxMenu .scroll-box
