--- a/src/styles/themes/proton/vars.styl
+++ b/src/styles/themes/proton/vars.styl
@@ -21,6 +21,7 @@
   --frame-el-overlay-clicked-bg: #ffffff24
   --frame-el-overlay-selected-bg: #ffffff24
   --frame-el-overlay-selected-border: var(--s-accent, #47cfff)
+  --frame-scrollbar-color: #ffffff46
 #root[data-frame-color-scheme="light"]
   --frame-bg: var(--s-frame-bg, #eaeaea)
   --frame-fg: var(--s-frame-fg, #222)
@@ -28,6 +29,7 @@
   --frame-el-overlay-clicked-bg: #0000001c
   --frame-el-overlay-selected-bg: #00000012
   --frame-el-overlay-selected-border: var(--s-accent, #146fd9)
+  --frame-scrollbar-color: #00000046
 
 #root[data-toolbar-color-scheme="dark"]
   --toolbar-bg: var(--s-toolbar-bg, #323232)
@@ -44,6 +46,7 @@
   --status-notice: #00e9fb
   --accent: var(--s-accent, var(--status-active))
   --border: var(--s-toolbar-border, #21212164)
+  --toolbar-scrollbar-color: #ffffff46
 #root[data-toolbar-color-scheme="light"]
   --toolbar-bg: var(--s-toolbar-bg, #fafafa)
   --toolbar-fg: var(--s-toolbar-fg, #111)
@@ -59,6 +62,7 @@
   --status-notice: #01acda
   --accent: var(--s-accent, var(--status-active))
   --border: var(--s-toolbar-border, #dbdbdb64)
+  --toolbar-scrollbar-color: #00000046
 
 #root[data-act-el-color-scheme="dark"]
   --active-el-bg: var(--s-act-el-bg, #ffffff24)
@@ -77,10 +81,12 @@
   --popup-bg: var(--s-popup-bg, var(--frame-bg, #363636))
   --popup-fg: var(--s-popup-fg, var(--frame-fg, #fafafa))
   --popup-shadow: 0 0 0 1px var(--s-popup-border, #ffffff16), 0 1px 16px 0 #00000048
+  --popup-scrollbar-color: #ffffff46
 #root[data-popup-color-scheme="light"]
   --popup-bg: var(--s-popup-bg, var(--frame-bg, #fff))
   --popup-fg: var(--s-popup-fg, var(--frame-fg, #111))
   --popup-shadow: 0 0 0 1px var(--s-popup-border, #00000016), 0 1px 16px 0 #00000032
+  --popup-scrollbar-color: #00000046
 
 // ---
 // -- Plain theme
